# NL-ChatGPT

./: .env.example  .gitignore  Makefile  README.md  pyproject.toml  requirements.txt
.streamlit/: config.toml
app/: streamlit_app.py
docs/: ARCHITECTURE.md  DEMO.md  FAILURE_MODES.md  PHASES.md  PROMPTS.md  SUBMISSION.md
docs/deck/: NL_CHATGPT_SLIDES.md
docs/research/: README.md  interview-guide.md  observation-protocol.md  survey-questions.md
eval/: __init__.py  dataset.jsonl  golden_qa.jsonl  load_dataset.py  metrics.py  run_all.py  run_calibration.py  run_deepeval.py  run_ragas.py  schemas.py
scripts/: check_secrets.py
src/: __init__.py
src/agents/: __init__.py  graph.py  state.py
src/agents/nodes/: __init__.py  draft.py  justify.py  planner.py  query_processor.py  refine.py  retrieve.py  verify.py
src/api/: __init__.py  main.py
src/config/: settings.py
src/llm/: __init__.py  client.py
src/models/: __init__.py  confidence.py  judgment.py  schemas.py
src/prompts/: __init__.py  templates.py
src/retrieval/: __init__.py  normalize.py  perplexity.py  service.py  tavily.py
src/storage/: __init__.py  judgment_store.py
src/ui/: __init__.py  confidence.py  judgment.py  judgment_panel.py  runner.py
src/verification/: __init__.py  claim_extractor.py  minicheck.py  refiner.py  verifier.py
tests/: test_eval_dataset.py  test_eval_metrics.py  test_golden_qa.py  test_groq_client.py  test_parallel_retrieval.py  test_phase0_graph.py  test_phase1_graph.py  test_phase2_verify.py  test_phase3_ui.py  test_phase5_judgment.py  test_retrieval_normalize.py
