[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "nl-chatgpt"
version = "0.1.0"
description = "Agentic RAG assistant with verified, justifiable answers"
readme = "README.md"
requires-python = ">=3.11,<4"
dependencies = [
    "langgraph>=0.2.0",
    "langchain>=0.3.0",
    "langchain-core>=0.3.0",
    "langchain-openai>=0.2.0",
    "llama-index>=0.11.0",
    "tavily-python>=0.5.0",
    "streamlit>=1.39.0",
    "fastapi>=0.115.0",
    "uvicorn>=0.32.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.6.0",
    "httpx>=0.27.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "ruff>=0.7.0",
]
eval = [
    "ragas>=0.2.0",
    "deepeval>=1.0.0",
    "datasets>=2.14.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.ruff]
line-length = 100
target-version = "py311"
